Tighten selector to fix editor tabs layout issue on some sites

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/reset.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/src/reset.css
@@ -25,6 +25,8 @@
     border-radius: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
+
+    min-height: auto;
 }
 
 .mceDefaultSkin select, .mceDefaultSkin textarea, .mceDefaultSkin input[type] {
